# rules_python_demo

./: WORKSPACE
scripts/demo/: BUILD.bazel  demo.py  requirements.in  requirements.txt
